# rs-sha2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: npm-publish.yml  pull-request.yml
c/: Cargo.toml  build.rs
c/src/: lib.rs  sha224.rs  sha256.rs  sha384.rs  sha512.rs  sha512_224.rs  sha512_256.rs
c/test/: CMakeLists.txt
c/test/src/: CMakeLists.txt  main.c  test_macros.h
c/test/src/helpers/: rsp_parser.c
ecmascript/: .gitignore  .prettierrc.mjs  eslint.config.mjs  loader.mjs  package-lock.json  package.json  tsconfig.json
ecmascript/@types/: import-meta.d.ts  modules.d.ts
ecmascript/benchmark/: package-lock.json  package.json
ecmascript/benchmark/src/: index.js
ecmascript/fuzz/: package-lock.json  package.json
ecmascript/fuzz/src/: index.cjs  reproduce.cjs
ecmascript/resources/: README.md  closure.externs.wasm.js  index.d.cts.in  index.d.mts.in  package.json.in  types.d.cts  types.d.mts  wasm-instantiate.ts  wrapper.ts
ecmascript/scripts/: build.ts  bundle.ts  cargo.ts  cjs.ts  closure.ts  config.ts  copy-assets.ts  declarations.ts  esm.ts  exec.ts  features.ts  optimize-wasm.ts  package-json.ts  replace-all-rotl.d.mts  replace-all-rotl.mjs  test.ts  wasm2js.ts
ecmascript/scripts/utils/: bundle-factory.ts  closure.ts  exec.ts  features.ts  npm.ts
ecmascript/tests/: api.test.ts  get-sha2-instance.ts  helpers.ts  load-vectors.ts  parse-vectors.ts  sha224.test.ts  sha256.test.ts  sha384.test.ts  sha512.test.ts  sha512_224.test.ts  sha512_256.test.ts  tests-factory.ts
rust/: Cargo.toml
rust/benches/: sha2.rs
rust/src/: lib.rs  main.rs
rust/src/sha2_internals/: engine.rs  family.rs  hasher.rs  mod.rs  state.rs  tests.rs  variant.rs  word.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/test/: CMakeLists.txt
wasm/test/CMake/: configure.h.in
wasm/test/src/: CMakeLists.txt  bindings.h  main.c  test_macros.h  test_sha_family.c  test_sha_serialize.c
wasm/test/src/helpers/: rsp_parser.c  rsp_parser.h
