# Copyright © 2026 Apeleg Limited. All rights reserved.
#
# Permission to use, copy, modify, and distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
# REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
# INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
# LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
# OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
# PERFORMANCE OF THIS SOFTWARE.

[package]
name = "c-sha2"
version = { workspace = true }
edition =  { workspace = true }

[lib]
name = "c_sha2"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["sha256", "sha2-compress-unrolled", "streaming", "deserialize", "serialize"]
deserialize = ["sha2/deserialize"]
serialize = ["sha2/serialize"]
sha224 = ["sha2/sha224"]
sha256 = ["sha2/sha256"]
sha2-compress-unrolled = ["sha2/sha2-compress-unrolled"]
sha384 = ["sha2/sha384"]
sha512_256 = ["sha2/sha512_256"]
sha512 = ["sha2/sha512"]
std = ["sha2/std"]
streaming = ["sha2/streaming"]
sync = ["sha2/sync"]

[dependencies]
sha2 = { path = "../rust", default-features = false, features = [] }

[build-dependencies]
cbindgen = { version = "=0.29.2",  default-features = false }
