[package]
name = "sha2"
version = { workspace = true }
edition =  { workspace = true }

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["std"]

[lib]
name = "sha2"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = [
    "streaming",
    "sha256",
    "deserialize",
    "serialize",
    "sha2-compress-unrolled",
]
deserialize = []
serialize = []
sha224 = []
sha256 = []
sha2-compress-unrolled = []
sha384 = []
sha512 = []
sha512_256 = []
std = []
streaming = []
sync = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", default-features = true }

[build-dependencies]

[[bench]]
name = "sha2"
path = "benches/sha2.rs"
harness = false
